connect online devices

--- a/Serenity.properties
+++ b/Serenity.properties
@@ -27,23 +27,25 @@ serenity.requirements.dir = src/test/resources/features
 serenity.report.encoding = UTF-8
 serenity.console.colors=true
 
-appium.hub = http://0.0.0.0:4723/wd/hub
+appium.hub = http://hub.browserstack.com/wd/hub
 appium.platformName = ANDROID
-appium.deviceName = emulator-5554
-appium.platformVersion = 11
-appium.app = classpath:app/SauceDemoApp.apk
+appium.deviceName = Samsung Galaxy S21 Ultra
+appium.platformVersion = 10.0
+appium.app = bs://fcca5a58f589985b83ae90f02a92a1135b423096
 appium.autoGrantPermissions = true
 appium.unicodeKeyboard = true
 appium.resetKeyboard = true
 appium.appPackage = com.swaglabsmobileapp
 appium.appActivity = com.swaglabsmobileapp.SplashActivity
+appium.browserstack.user = chungnguyn_O4cmhf
+appium.browserstack.key = SMquyB8q2Pxh1vDzHHXR
 ################################################
 #appium.startIWDP = true
 appium.automationName = UiAutomator2
 appium.fullReset = false
 appium.noReset = true
 
-report.customfields.Environment = ${environment}
-report.customfields.Url = ${base.url}
+report.customfields.Environment = live
+report.customfields.Url = https://www.saucedemo.com/
 report.customfields.Tester = Chungnd
 report.customfields.order=Environment,Url,Tester
