--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,23 @@
 
     <name>SauceDemo Application Test</name>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>2.3.31</serenity.version>
+        <serenity.version>3.2.5</serenity.version>
         <serenity.cucumber.version>2.3.6</serenity.cucumber.version>
         <cucumber.version>6.9.0</cucumber.version>
-        <lombok.version>1.18.16</lombok.version>
-        <log4j.version>2.14.0</log4j.version>
+        <lombok.version>1.18.24</lombok.version>
+        <log4j.version>2.17.2</log4j.version>
         <junit.platform.launcher>1.7.0</junit.platform.launcher>
         <junit.version>5.7.0</junit.version>
-        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -89,7 +96,7 @@
         <dependency>
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
-            <version>7.5.1</version>
+            <version>8.0.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -142,15 +149,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M6</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M6</version>
                 <configuration>
                     <parallel>methods</parallel>
                     <threadCount>4</threadCount>
-<!--                    <perCoreThreadCount>true</perCoreThreadCount>-->
                     <includes>
                         <include>**/runner/*.java</include>
                     </includes>
@@ -168,32 +175,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                   <release>11</release>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>2.3.8</version>
+                <version>${serenity.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>net.serenity-bdd</groupId>
                         <artifactId>serenity-single-page-report</artifactId>
                         <version>${serenity.version}</version>
                     </dependency>
-                    <dependency>
-                        <groupId>net.serenity-bdd</groupId>
-                        <artifactId>serenity-navigator-report</artifactId>
-                        <version>2.3.13</version>
-                    </dependency>
                 </dependencies>
                 <configuration>
-<!--                    <tags>${tags}</tags>-->
-                    <reports>single-page-html,navigator</reports>
+                    <reports>single-page-html</reports>
                 </configuration>
                 <executions>
                     <execution>
