--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>chungnd.auto</groupId>
     <artifactId>saucedemo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>website</module>
+        <module>application</module>
+    </modules>
 
     <name>SauceDemo Application Test</name>
 
